--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,8 +10,8 @@ jobs:
   test:
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.elmmh8j.mongodb.net
-      MONGODB_USERNAME: Imran
-      MONGODB_PASSWORD: q63S9reXZMvqB8LW
+      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
+      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
       PORT: 8080
     environment: testing
     runs-on: ubuntu-latest
